crates/eml_cli/tests/snapshots/integration__ui__run@effects__effect_resume.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/effect_resume.em
---
--- stdout ---
hello name! from place!
asked place
asked name
[hello name from place]
--- stderr ---
