crates/eml_cli/tests/snapshots/integration__ui__run@effects__file_across_once_of_multi_effect.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/file_across_once_of_multi_effect.em
---
--- stdout ---
32
--- stderr ---
