crates/eml_cli/tests/snapshots/integration__ui__run@effects__io_twice.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/io_twice.em
---
--- stdout ---
host
deployed
--- stderr ---
