crates/eml_cli/tests/snapshots/integration__ui__run@effects__mask_inside_handler.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/mask_inside_handler.em
---
--- stdout ---
outer!
1
--- stderr ---
