crates/eml_cli/tests/snapshots/integration__ui__run@effects__mask_multi.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/mask_multi.em
---
--- stdout ---
outer no
--- stderr ---
