crates/eml_cli/tests/snapshots/integration__ui__run@effects__multi_captured.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/multi_captured.em
---
--- stdout ---
32
6
--- stderr ---
