crates/eml_cli/tests/snapshots/integration__ui__run@effects__multi_shot_takes_saved_data_apart.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/multi_shot_takes_saved_data_apart.em
---
--- stdout ---
11
--- stderr ---
