crates/eml_cli/tests/snapshots/integration__ui__run@effects__operation_over_application.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effects/operation_over_application.em
---
--- stdout ---
6
--- stderr ---
